<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<!--toolbar布局-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/add_apply_toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="?attr/colorPrimaryDark"
            app:navigationIcon="@drawable/back">

            <TextView
                android:id="@+id/title"
                android:background="@null"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_apply_toolbar_title"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/new_apply_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="20dp"
                android:src="@drawable/submit" />
        </android.support.v7.widget.Toolbar>
<!--        职位-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:weightSum="10"
            android:id="@+id/new_apply_jobName"
            android:padding="10dp"
            android:layout_below="@id/add_apply_toolbar"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:textSize="20dp"
                android:text="职         务:"/>
            <EditText
                style="?android:attr/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@null"
                android:textSize="18dp"
                android:id="@+id/new_apply_ed_job"
                android:paddingLeft="5dp"
                android:hint="@string/tip_new_apply_jobName"/>
        </LinearLayout>
<!--        分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe"
            android:layout_below="@id/new_apply_jobName"/>
<!--        工作地点-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:weightSum="10"
            android:id="@+id/new_apply_place"
            android:padding="10dp"
            android:layout_below="@id/new_apply_jobName"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:textSize="20dp"
                android:text="工作地点:"/>
            <EditText
                style="?android:attr/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@null"
                android:textSize="18dp"
                android:id="@+id/new_apply_ed_place"
                android:paddingLeft="5dp"
                android:hint="@string/tip_new_apply_place"/>
        </LinearLayout>
<!--        分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe"
            android:layout_below="@id/new_apply_place"/>
<!--        薪资-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:weightSum="10"
            android:id="@+id/new_apply_salary"
            android:padding="10dp"
            android:layout_below="@id/new_apply_place"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:textSize="20dp"
                android:text="意向薪资:"/>
            <EditText
                style="?android:attr/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@null"
                android:id="@+id/new_apply_ed_salary"
                android:textSize="18dp"
                android:paddingLeft="5dp"
                android:hint="@string/tip_new_apply_salary"/>
        </LinearLayout>
<!--        分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe"
            android:layout_below="@id/new_apply_salary"/>
<!--        工作经历-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/new_apply_experience"
            android:weightSum="10"
            android:padding="30dp"
            android:layout_below="@id/new_apply_salary"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.3"
                android:gravity="center"
                android:textSize="20dp"
                android:text="工作经历:"/>
        </LinearLayout>
<!--        工作经历编辑框-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_below="@id/new_apply_experience">
            <View
                android:layout_width="0dp"
                android:layout_weight="2.2"
                android:layout_height="match_parent"/>
            <EditText
                android:paddingEnd="5dp"
                android:lineSpacingExtra="5dp"
                style="?android:attr/textViewStyle"
                android:layout_width="0dp"
                android:layout_weight="7.8"
                android:textSize="15dp"
                android:paddingRight="10dp"
                android:id="@+id/new_apply_ed_experience"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:background="@null"
                android:hint="@string/tip_new_apply_experience"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>

