<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<!--        toolbar布局-->
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="0dp"
            android:background="?attr/colorPrimaryDark"
            app:navigationIcon="@drawable/back"
            android:id="@+id/add_job_toolbar">

            <TextView
                android:id="@+id/title"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/new_job_toolbar_title"
                android:textSize="20sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingRight="20dp"
                android:id="@+id/new_job_submit"
                android:src="@drawable/submit"/>
        </android.support.v7.widget.Toolbar>
<!--        职务-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:weightSum="10"
            android:id="@+id/new_job_jobName"
            android:padding="30dp"
            android:layout_below="@id/add_job_toolbar"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:textSize="20dp"
                android:text="职务:"/>
            <EditText
                style="?android:attr/textViewStyle"
                android:layout_width="0dp"
                android:id="@+id/new_job_ed_jobName"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@null"
                android:textSize="18dp"
                android:paddingLeft="5dp"
                android:hint="@string/tip_new_job_name"/>
        </LinearLayout>
<!--        分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe"
            android:layout_below="@id/new_job_jobName"/>
<!--        公司-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/new_job_companyName"
            android:weightSum="10"
            android:padding="30dp"
            android:layout_below="@id/new_job_jobName"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:textSize="20dp"
                android:text="公司:"/>
            <EditText
                style="?android:attr/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@null"
                android:id="@+id/new_job_ed_companyName"
                android:textSize="18dp"
                android:paddingLeft="5dp"
                android:hint="@string/tip_new_job_name"/>
        </LinearLayout>
<!--        分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe"
            android:layout_below="@id/new_job_companyName"/>
<!--        薪水-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/new_job_salary"
            android:weightSum="10"
            android:padding="30dp"
            android:layout_below="@id/new_job_companyName"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:textSize="20dp"
                android:text="薪水:"/>
            <EditText
                style="?android:attr/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@null"
                android:textSize="18dp"
                android:id="@+id/new_job_ed_salary"
                android:paddingLeft="5dp"
                android:hint="@string/tip_new_job_name"/>
        </LinearLayout>
<!--        分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe"
            android:layout_below="@id/new_job_salary"/>
<!--        需求-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/new_job_request"
            android:weightSum="10"
            android:padding="30dp"
            android:layout_below="@id/new_job_salary"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:textSize="20dp"
                android:text="需求:"/>
        </LinearLayout>
<!--        需求编辑框-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_below="@id/new_job_request">
            <View
                android:layout_width="0dp"
                android:layout_weight="1.9"
                android:layout_height="match_parent"/>
            <EditText
                android:lineSpacingExtra="5dp"
                style="?android:attr/textViewStyle"
                android:layout_width="0dp"
                android:layout_weight="8.1"
                android:textSize="15dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:background="@null"
                android:id="@+id/new_job_ed_request"
                android:hint="@string/tip_new_job_request"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
